WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239683
Crash under AsyncScrollingCoordinator::scrollingThreadAddedPendingUpdate()
https://bugs.webkit.org/show_bug.cgi?id=239683
Summary
Crash under AsyncScrollingCoordinator::scrollingThreadAddedPendingUpdate()
Simon Fraser (smfr)
Reported
2022-04-22 20:20:52 PDT
Crash under AsyncScrollingCoordinator::scrollingThreadAddedPendingUpdate()
Attachments
Patch
(1.83 KB, patch)
2022-04-22 20:22 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-04-22 20:22:37 PDT
Created
attachment 458195
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-04-22 20:22:40 PDT
<
rdar://problem/92198272
>
EWS
Comment 3
2022-04-22 21:41:28 PDT
Committed
r293286
(
249911@main
): <
https://commits.webkit.org/249911@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458195
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug